Fixed time design

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -180,48 +180,36 @@
     <ion-grid class="fullGrid footer">
       <div class="first-section" style="padding-top: 0px !important;margin-top: 10px !important">
         <ion-row align-items-center="" class="row">
-          <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
-            <div class="container contactUs" style="text-align: left;">
-              <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
-              <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday -
-                  Saturday: </span>10AM - 10:00PM</p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
-                </span>10:00aM - 8:00PM</p>
-              <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
-                  Time: </span>24/7 Hours</p> -->
-            </div>
-          </ion-col>
-          <ion-col class="col" col-12="" col-lg-6="" text-center="">
-            <div class="container contactUs" style="text-align: center">
-              <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-                <ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065
-              </p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-                <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>323 229 0228
-              </p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-                <ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span
-                  style="color:#C49433"> info@kusinafilipina.com</span>
-              </p>
-            </div>
-          </ion-col>
-          <ion-col class="col" col-12="" col-lg-3="" text-center="">
-            <div class="container contactUs" style="text-align: left;">
-              <h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
-              <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;line-height:30px;"> Sign up now to our
-                newsletter to get latest food items and our new events. This theme will help you organize your site
-                without any technical skills.</p>
-  
-              <div class="inputSection">
-                <input class="headFont" type="text" placeholder="Email Address">
-                <button class="headFont">SIGN UP</button>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
+        <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
+          <div class="container contactUs" style="text-align: left;">
+            <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
+            <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
+            <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 80px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
+          </div>
+        </ion-col>
+        <ion-col class="col" col-12="" col-lg-6="" text-center="">
+          <div class="container contactUs" style="text-align: center">
+            <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065</p>
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>323 229 0228</p>
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433">info@kusinafilipina.com</span></p>
+          </div>
+        </ion-col>
+        <ion-col class="col" col-12="" col-lg-3="" text-center="">
+          <div class="container contactUs" style="text-align: left;">
+            <h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
+            <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
+            <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;line-height:30px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
+
+            <div class="inputSection">
+                    <input class="headFont" type="text" placeholder="Email Address">
+                    <button class="headFont">SIGN UP</button>
+                </div>
+          </div>
+        </ion-col>
+      </ion-row>
       </div>
     </ion-grid>
   
