Changed About us content

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -109,8 +109,8 @@
     <ion-row no-padding>
       <ion-col col-lg-5 offset-lg-1 col-xl-5 offset-xl-1>
         <div class="story">
-          <h2 class="title curvyFont welcomeText goldenText" style="text-align: left !important; font-size: 6rem !important;">About Us</h2>
-          <h1 class="mainTexts headFont">Taste of Home</h1>
+          <h2 class="title curvyFont welcomeText goldenText" style="text-align: left !important; font-size: 5rem !important;">Let us do you Catering and Events</h2>
+          <h1 class="mainTexts headFont" style="font-size: 3rem !important;">Call 323-229-0228</h1>
           <div class="subTexts">
             <p class="headFont">We at Kusina Filipina aims to provide you the best experience every time you visit. We prepare the most authentic filipino food that will make you say "This tastes like home cooking" and we have friendly staff that will make you feel at home.
             </p>
