Revisions (HomePage spacing, Catering Active Category, About Us and Catering Spacings and buttons)

--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -201,7 +201,7 @@
               <h3>New York</h3>
             </div>
           </div>
-          <button ion-button class="menu-button" (click)="goTo()">
+          <button ion-button class="menu-button menu-button2" (click)="goTo()" style="background: rgb(196,148,51) !important;">
             <p>CONTACT US</p>
           </button>
         </div>
@@ -216,7 +216,7 @@
     <ion-grid>
       <ion-row>
         <ion-col col-12 style="margin-top: 10px !important;padding-left: 80px;padding-right:80px;
-          margin-bottom: 20px !important;">
+          margin-bottom: 59px !important;">
           <hr class="sectionLine">
         </ion-col>
       </ion-row>
@@ -253,7 +253,7 @@
               <h3>New York</h3>
             </div>
           </div>
-          <button ion-button class="menu-button" (click)="goTo()">
+          <button ion-button class="menu-button menu-button2" (click)="goTo()" style="background: rgb(196,148,51) !important;">
             <p>CONTACT US</p>
           </button>
         </div>
