--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -527,7 +527,7 @@ info@kusinafilipina.com</span></p>
         </ion-row>
       </div>
     </ion-grid>
-       <div class="story thSection">
+       <div class="story thSection" style="margin-bottom: 0px !important;">
       <h2 class="title curvyFont welcomeText goldenText" style="text-align: center !important;" style="font-size: 6rem !important;">Testimonials</h2>
       <h1 class="mainTexts headFont">CUSTOMERS REVIEW</h1>
       <ion-slides style="padding-bottom: 30px;" pager>
