--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -384,7 +384,7 @@
     </ion-grid>
   </div>
 
-  <div class="first-section footer mobSections" style="padding-top: 0px !important;margin-top: -10px !important"
+  <div class="first-section footer mobSections" style="padding-top: 30px !important;margin-top: -10px !important"
     *ngIf="checkApp">
     <ion-row align-items-center="" class="row">
        <ion-col class="col" col-12="" col-lg-3="" class="">
@@ -420,7 +420,7 @@
             new events. This theme will help you organize your site without any technical skills.</p>
   
           <div class="inputSection">
-            <input type="text" placeholder="Email Address">
+            <input type="text" placeholder="Email Address" style="padding: 15px;">
             <button>SIGN UP</button>
           </div>
   
