--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -67,7 +67,7 @@
 <div class="mapContainer">
     <div #map id="map"></div>
 </div>
-    <div class="first-section footer mobSections" style="padding-top: 0px !important;margin-top: -10px !important"
+    <div class="first-section footer mobSections" style="padding-top: 30px !important;margin-top: -10px !important"
         *ngIf="checkApp">
         <ion-row align-items-center="" class="row">
             <ion-col class="col" col-12="" col-lg-3="" class="">
@@ -104,7 +104,7 @@
                         new events. This theme will help you organize your site without any technical skills.</p>
     
                     <div class="inputSection">
-                        <input type="text" placeholder="Email Address">
+                        <input type="text" placeholder="Email Address" style="padding: 15px;">
                         <button>SIGN UP</button>
                     </div>
     
@@ -227,7 +227,7 @@
                             our newsletter to get latest food items and our new events. This theme will help you
                             organize your site without any technical skills.</p>
 
-                        <div class="inputSection">
+                        <div class="inputSection" style="padding: 0px !important">
                             <input class="headFont" type="text" placeholder="Email Address">
                             <button class="headFont">SIGN UP</button>
                         </div>
