--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -93,7 +93,7 @@
 	</ion-row> -->
 
 	
-	<div class="first-section footer mobSections" style="padding-top: 0px !important;margin-top: -10px !important"
+	<div class="first-section footer mobSections" style="padding-top: 30px !important;margin-top: -10px !important"
 		*ngIf="checkApp">
 		<ion-row align-items-center="" class="row">
 			<ion-col class="col " col-12="" col-lg-3="" class="text-menu " style="padding: 0px !important;">
@@ -133,8 +133,8 @@
 						and our
 						new events. This theme will help you organize your site without any technical skills.</p>
 	
-					<div class="inputSection">
-						<input type="text" placeholder="Email Address">
+					<div class="inputSection" style="padding: 0px !important">
+						<input type="text" placeholder="Email Address" style="padding: 15px;">
 						<button>SIGN UP</button>
 					</div>
 	
