Catering update - buttons, div heights, texts, and moterland navigation functionality

--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -29,38 +29,38 @@
         <div class="subTexts">
           <h2 class="mainTitle">Event Details</h2>
           <hr>
-          <h3 class="eventTitle">Event Title</h3>
+          <h3 class="eventTitle">Free Stand Up Comedy Show </h3>
           <div class="eventDetailsContainer">
+            <!-- <div class="eventDetails">
+              <h2><i class="fas fa-info" ></i>every Thursday Night</h2>
+              <h3></h3>
+            </div> -->
             <div class="eventDetails">
-              <h2><i class="far fa-calendar-alt" ></i> Start Date</h2>
-              <h3>03 April, 2019</h3>
+              <h2><i  class="far fa-clock"></i>Time</h2>
+              <h3>Evening</h3>
             </div>
             <div class="eventDetails">
-              <h2><i  class="far fa-clock"></i> Start Time</h2>
-              <h3>05:00</h3>
+              <h2><i class="far fa-calendar-alt"></i>Date</h2>
+              <h3>Every Thursday</h3>
             </div>
-            <div class="eventDetails">
-              <h2><i class="far fa-calendar-alt"></i> End Date</h2>
-              <h3>20 February, 2019</h3>
-            </div>
-            <div class="eventDetails">
+            <!-- <div class="eventDetails">
               <h2><i class="far fa-clock"></i> End Time</h2>
               <h3>00:00</h3>
-            </div>
+            </div> -->
             <div class="eventDetails">
               <h2><i  class="fas fa-map-marker"></i> Location</h2>
-              <h3>New York</h3>
+              <h3>4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065</h3>
             </div>
           </div>
-          <button ion-button class="menu-button" (click)="goTo()">
-            <p>CONTACT US</p>
+          <button ion-button class="menu-button" (click)="goToMotherLand()">
+            <p>MOTHERLAND COMEDY</p>
           </button>
         </div>
 
       </div>
 
     </ion-row>
-    <ion-row no-padding>
+    <!-- <ion-row no-padding>
       <div class="contentSections" style="padding-top: 0px !important;">
         <div class="subTexts">
           <h2 class="mainTitle">Event Details</h2>
@@ -95,17 +95,17 @@
     
       </div>
     
-    </ion-row>
+    </ion-row> -->
     <ion-row no-padding>
       <div class="contentSections secndSection">
           <h2 class="mainTexts headFont">CATERING AND SERVICES</h2>
           <div class="cateringSection Frst">
             <h2 class="cateringTitle">Catering Service A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+            <p></p>
           </div>
           <div class="cateringSection Scnd">
             <h2 class="cateringTitle">Catering Service B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</p>
+            <p></p>
           </div>
       </div>
     </ion-row>
@@ -113,13 +113,12 @@
       <div class="contentSections timeSched">
         <h2 class="title curvyFont welcomeText goldenText" style="font-family: 'Cookie Curvy' !important;">Business
           Hours</h2>
-        <h2 class="mainTexts headFont">LET US DO YOUR CATERING AND PARTIES</h2>
+        <h2 class="mainTexts headFont">LET US DO YOUR CATERING AND EVENTS</h2>`
         <div class="alarmIcon">
           <ion-icon name="alarm" class="goldenText"></ion-icon>
         </div>
         <div class="sched subTexts businessHrs" style="background: none !important">
-          <h4>Monday - Saturday: 10:00am - 10:00pm</h4>
-          <h4>Sunday: 10:00am - 08:00pm</h4>
+          <h4>Please call us at 323-229-0228</h4>
         </div>
         <button ion-button class="menu-button" (click)="callNow()" style="width: 40% !important;">
           <h2>CONTACT US</h2>
@@ -175,34 +174,30 @@
         </ion-col>
         <ion-col col-lg-5 col-xl-4 col-md-6 style="padding: 0px 80px 0px 10px">
                 <div class="contentSections3" style="padding-bottom: 50px !important;">
-        <div class="subTexts">
+        <div class="subTexts" style="min-height: 440px; max-height: 440px">
           <h2 class="mainTitle">Event Details</h2>
           <hr class="smallLine">
-          <h3 class="eventTitle">Event Title</h3>
+          <h3 class="eventTitle">Free Stand Up Comedy Show </h3>
           <div class="eventDetailsContainer">
-            <div class="eventDetails">
-              <h2><i class="far fa-calendar-alt" ></i> Start Date</h2>
-              <h3>03 April, 2019</h3>
+               <div class="eventDetails">
+              <h2><i  class="far fa-clock"></i>Time</h2>
+              <h3>Evening</h3>
             </div>
             <div class="eventDetails">
-              <h2><i  class="far fa-clock"></i> Start Time</h2>
-              <h3>05:00</h3>
+              <h2><i class="far fa-calendar-alt"></i>Date</h2>
+              <h3>Every Thursday</h3>
             </div>
-            <div class="eventDetails">
-              <h2><i class="far fa-calendar-alt"></i> End Date</h2>
-              <h3>20 June, 2019</h3>
-            </div>
-            <div class="eventDetails">
+            <!-- <div class="eventDetails">
               <h2><i class="far fa-clock"></i> End Time</h2>
               <h3>00:00</h3>
-            </div>
+            </div> -->
             <div class="eventDetails">
               <h2><i  class="fas fa-map-marker"></i> Location</h2>
-              <h3>New York</h3>
+              <h3>4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065</h3>
             </div>
           </div>
-          <button ion-button class="menu-button menu-button2" (click)="goTo()" style="background: rgb(196,148,51) !important;">
-            <p>CONTACT US</p>
+          <button ion-button class="menu-button menu-button2" (click)="goToMotherLand()" style="background: rgb(196,148,51) !important;">
+            <p>MOTHERLAND COMEDY</p>
           </button>
         </div>
 
@@ -222,7 +217,7 @@
       </ion-row>
     </ion-grid>
   
-    <ion-grid style="margin-bottom: 50px;">
+   <!--  <ion-grid style="margin-bottom: 50px;">
       <ion-row no-padding>
   
         <ion-col col-lg-5 col-xl-4 style="padding: 0px 30px 0px 80px">
@@ -268,7 +263,7 @@
         </ion-col>
   
       </ion-row>
-    </ion-grid>
+    </ion-grid> -->
   
     <ion-row align-items-center="" class="row" style="background-color: #f5f5f5">
       <ion-col class="col" col-12="" col-lg-6="" push-lg-3="" class="text-menu">
@@ -286,18 +281,14 @@
         <ion-col col-lg-6 col-xl-6 style="padding: 0px 10px 0px 80px">
           <div class="aboutImage">
             <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service A</h2>
-            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center"></p>
           </div>
         </ion-col>
   
         <ion-col col-lg-6 col-xl-6 style="padding: 0px 80px 0px 10px">
           <div class="aboutImage">
             <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service B</h2>
-            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center"></p>
           </div>
         </ion-col>
   
@@ -317,14 +308,13 @@
           <ion-col col-lg-6 col-xl-6>
             <div class="contentSections2 timeSched">
               <h2 class="title curvyFont welcomeText goldenText">Business Hours</h2>
-              <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>OPEN FOR SPECIAL OCCASIONS</strong>
+              <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>LET US DO YOUR CATERING AND EVENTS</strong>
               </h2>
               <div class="alarmIcon">
                 <ion-icon name="alarm" class="goldenText"></ion-icon>
               </div>
               <div class="sched subTexts">
-                <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
-                <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
+                <h4 style="font-size: 1vw !important;">Please call us at 323-229-0228</h4>
               </div>
               <button ion-button class="menu-button" (click)="goToContactUs()">
                 <h2 class="headFont">CONTACT US</h2>
@@ -445,7 +435,7 @@
     <div class="eatIcon">
       <div class="eatIconContent">
         <ion-icon name="restaurant" color="goldenBrown"></ion-icon>
-        <p class="eatSubText">An oasis of pleasure</p>
+        <p class="eatSubText">Taste of Home</p>
       </div>
     </div>
   </ion-toolbar>
