--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -266,7 +266,7 @@
         <div class="eatIcon">
             <div class="eatIconContent">
                 <ion-icon name="restaurant" color="goldenBrown"></ion-icon>
-                <p class="eatSubText">An oasis of pleasure</p>
+                <p class="eatSubText">Taste of Home</p>
             </div>
         </div>
     </ion-toolbar>
