--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -810,7 +810,7 @@ info@kusinafilipina.com</span></p>
       <div class="eatIcon">
         <div class="eatIconContent">
           <ion-icon name="restaurant" color="goldenBrown"></ion-icon>
-          <p class="eatSubText">An oasis of pleasure</p>
+          <p class="eatSubText">Taste of Home</p>
         </div>
       </div>
     </ion-toolbar>
