--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -259,8 +259,8 @@
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;vertical-align: middle"><ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 4157 Eagle Rock Blvd
 							Ste 1
 							Los Angeles, CA 90065</p>
-						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;vertical-align: middle"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(323) 229-0228</p>
-						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;vertical-align: middle"><ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> info@kusinafilipina.com</span></p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;vertical-align: middle; cursor: pointer" (click)="callNow()"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(323) 229-0228</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;vertical-align: middle; cursor: pointer" (click)="emailNow()"><ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> info@kusinafilipina.com</span></p>
 					</div>
 					
 				</ion-col>
